[gd_scene load_steps=4 format=3 uid="uid://cjpu2i37y2jag"]

[ext_resource type="Script" uid="uid://b1lru5jj4x0f2" path="res://Things/UI/Dialogue/dialogue_manager.gd" id="1_8m2wu"]
[ext_resource type="PackedScene" uid="uid://g4yq1v466fm0" path="res://Things/UI/Dialogue/DialogueDisplay/dialogue_display.tscn" id="2_c2t4r"]
[ext_resource type="PackedScene" uid="uid://c78hfp1p86s4b" path="res://Things/UI/OrderDisplay/coffee_order_display.tscn" id="3_c2t4r"]

[node name="DialogueManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_8m2wu")

[node name="DialogueDisplay" parent="." instance=ExtResource("2_c2t4r")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 707.0
offset_top = 121.0
offset_right = 1310.0
offset_bottom = 837.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CoffeeOrderDisplay" parent="." instance=ExtResource("3_c2t4r")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1343.0
offset_top = 97.0
offset_right = 1843.0
offset_bottom = 697.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 1
size_flags_vertical = 6
